2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
	Add comment.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
	Don't mess with the component size, the parent does that for us.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.reCalcState):
	release lock when continuing the state change.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.doChildStateChange):
	More DEBUG.

	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux.....OggStream.Pad):
	Make sure the streaming thread is not running when we do our cleanup.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.shutDown):
	Don't join the state thread, it might be performing a callback when
	being joined.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad), (Pad.pauseTask):
	Take lock a little differently.

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.shutDown):
	Don't try to join the bus thread as this might cause a deadly embrace.

	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux.....OggStream.reStart):
	Add some debug for the segment/timestamps

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad.startTask):
	Avoid deadly embrace, the variable is now unprotected but that is fine.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad), (HTTPSrc),
	(HTTPSrc.openWithConnection), (HTTPSrc.openWithSocket),
	(HTTPSrc.getInputStream):
	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux.....OggStream.OggChain.activate),
	(OggDemux.....OggStream.OggChain.deActivate),
	(OggDemux.....OggStream.OggChain.pushPage),
	(OggDemux.....OggStream.Pad):
	* src/com/fluendo/plugin/Queue.java: (Queue.Pad):
	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec..Pad):