@@ -1,5 +1,10 @@
 2006-10-25  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/player/Cortado.java: (Cortado..init):
+	Disable seeking for MS JVM.
+
+2006-10-25  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
 	Add comment.
 
